--- a/styles/fleet.css
+++ b/styles/fleet.css
@@ -1,5 +1,7 @@
 .boats-list {
-    display: flex;
+    display: grid;
+    grid-template-columns: 25% 25%;
+    justify-content: center;
 }
 
 .boat {
@@ -19,6 +21,10 @@
 
 .boat img:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+.boat .description {
+    text-align: left;
 }
 
 @media (max-width: 950px) {
